--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:ava": "jest"
   },
   "peerDependencies": {
-    "react-intl": "^2.2.2 || ^3.0.0",
+    "react-intl": "*",
     "react-redux": "^5.0.1 || ^6.0.0 || ^7.0.0"
   },
   "dependencies": {
@@ -101,7 +101,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": ""
     }
   },
   "lint-staged": {
